# stride

./: .gitignore  .nycrc.json  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  biome.json  build.sh  codecov.yml  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.browser.config.ts  vitest.config.ci.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yaml  claude-code-review.yml  import.yaml  js.yaml  lint.yaml  playwright.yml  python.yaml  rust.yaml
.storybook/: main.ts  preview.ts  vitest.setup.ts
.storybook/mocks/: mapbox-gl.ts
api/: .dockerignore  Cargo.toml  Dockerfile  api.py  pyproject.toml
api/python/: alembic.ini
api/python/alembic/: env.py
api/python/alembic/versions/: 092b258ae1b1_add_cadence_fields_to_activity_and_.py  0e5e9e63a32e_add_status_field_to_activities.py  24aba78c08c3_add_activity_zone_tables_for_pace_power_.py  401bc1eef0c6_add_power_to_notification.py  4ada3f772d58_add_notification_table.py  556463c643c0_add_ftp_table_for_functional_threshold_.py  62d155b54e4c_change_ftp_column_to_integer.py  6bc63aa6ba32_add_min_temperature_to_activity.py  7f8e9a1b2c3d_add_created_at_and_updated_at_to_activity.py  82cdcb052b9e_add_zone_table_for_training_zones.py  8d2d94b7f265_add_duration_to_notification.py  9b1677ce4cdb_add_pool_length_and_num_lengths_to_.py  a1b2c3d4e5f6_add_map_field_to_user_table.py  a1b2c3d4e5f7_add_heatmap_table.py  a66b8b635653_add_performancepower_table_for_cycling_.py  b1c2d3e4f5a6_add_index_on_activity_user_id_start_time.py  b3c4d5e6f7a8_add_sport_enabled_fields_to_user.py  bedd3260e74e_add_rank_to_notification.py  c3bc7c6e9f0d_create_location_table_and_import_data.py  c7872b2cf926_add_city_subdivision_country_fields_and_.py  d512fe12eb64_add_temperature_fields_to_activity_lap_.py  e1d51382fb2b_remove_unique_constraint_from_activity_.py  f1d2a86022f0_remove_minutes_and_seconds_fields_from_.py  f4df0b04a5cc_add_performancerecord_table_for_top_5_.py  f5aa56e8d4a5_make_total_ascent_and_avg_speed_nullable.py
api/python/api/: api.pyi  app.py  auth.py  cli.py  config.py  db.py  dependencies.py  fit.py  fitness.py  model.py  utils.py
api/python/api/cli/: __init__.py  formatters.py
api/python/api/services/: __init__.py  activity.py  bulk_operations.py  exceptions.py  fit_file.py  heatmap.py  location.py  notification.py  performance.py  profile.py  storage.py  zone.py
api/python/scripts/: cli.py
api/src/: conversions.rs  lib.rs  types.rs  utils.rs
api/tests/: conftest.py  test_app.py  test_auth.py  test_fit.py  test_fitness.py  test_model.py  test_utils.py
api/tests/cli/: test_formatters.py
api/tests/data/: ride.fit  ride.json  run.fit  run.json  run_fr10.fit  run_fr10.json  swim.fit  swim.json
api/tests/services/: test_activity.py  test_bulk_operations.py  test_fit_file.py  test_heatmap.py  test_location.py  test_notification.py  test_performance.py  test_profile.py  test_storage.py  test_zone.py
data/: import.py
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/docs/: devices.md  fit.md  intro.md
e2e/: activities.spec.ts  auth.setup.ts  coverage.ts  home.spec.ts  login.spec.ts  navigation.spec.ts
scripts/: Cargo.toml  data.py  import.py  pyproject.toml  test_utils.py  utils.py
scripts/python/scripts/: activity.py  api.py  cli.py  data.py  db.py  import.py  model.py  scripts.pyi  utils.py
scripts/src/: lib.rs
src/: App.tsx  animations.ts  api.ts  api.tsx  colors.ts  main.ts  main.tsx  store.ts  store.tsx  theme.ts  theme.tsx  types.ts  types.tsx  utils.test.tsx  utils.ts  utils.tsx
src/api/: client.ts  index.ts  types.ts
src/components/: ActivitiesPageView.tsx  ActivitiesTable.tsx  ActivityBox.stories.tsx  ActivityBox.tsx  ActivityCharts.stories.tsx  ActivityCharts.tsx  ActivityLogo.stories.tsx  ActivityLogo.tsx  ActivityNotifications.tsx  ActivityPageView.stories.tsx  ActivityPageView.tsx  ActivityZones.stories.tsx  ActivityZones.tsx  DateSelector.stories.tsx  DateSelector.tsx  EditActivityModal.stories.tsx  EditActivityModal.tsx  ErrorBoundary.tsx  ErrorState.tsx  (+48 more)
tests/: api.test.ts  date.test.ts  home.spec.ts  setup.ts  store.test.ts  utils.test.tsx  validation.test.ts
(+85 files in other folders)
