[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.15",
    "fastapi[standard]>=0.136.3",
    "psycopg2>=2.9.12",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "pyyaml>=6.0.2",
    "shapely>=2.1.2",
    "sqlmodel>=0.0.24",
    "typer>=0.26.1",
]

[dependency-groups]
dev = [
    "alembic>=1.17.2",
    "maturin>=1.13.3",
    "mypy>=2.1.0",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.14",
    "types-pyyaml>=6.0.12.20260518",
    "types-boto3>=1.43.15",
    "ty>=0.0.39",
    "hypothesis>=6.153.2",
    "types-shapely>=2.1.0.20260518",
]

[build-system]
requires = ["maturin>=1.13.3,<2.0"]
build-backend = "maturin"

[tool.coverage.run]
relative_files = true

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"

[project.scripts]
cli = "api.cli:app"
