[project]
name = "scripts"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "fitdecode>=0.10.0",
    "pydantic>=2.11.4",
    "pyyaml>=6.0.2",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.15.0",
    "pydantic-settings>=2.9.1",
    "pyright>=1.1.400",
    "pytest-cov>=6.1.1",
    "pytest>=8.3.5",
    "types-pyyaml>=6.0.12.20250402",
]
